--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.7",
         "laravelcollective/html": "^6.4",
         "mews/captcha": "^3.2",
+        "owen-it/laravel-auditing": "^13.1",
         "spatie/laravel-permission": "^5.7"
     },
     "require-dev": {
