--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravelcollective/html": "^6.4",
         "mews/captcha": "^3.2",
         "owen-it/laravel-auditing": "^13.1",
-        "spatie/laravel-permission": "^5.7"
+        "spatie/laravel-permission": "^5.7",
+        "yajra/laravel-datatables-oracle": "10.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
