--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravelcollective/html": "^6.4",
         "mews/captcha": "^3.2",
         "owen-it/laravel-auditing": "^13.1",
+        "satriotol/fastcrud": "dev-master",
         "spatie/laravel-permission": "^5.7",
         "yajra/laravel-datatables-oracle": "10.0"
     },
@@ -39,10 +40,7 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        },
-        "files": [
-            "app/helpers.php"
-        ]
+        }
     },
     "scripts": {
         "post-autoload-dump": [
